Bug 205032 - [PATCH] Cover manager stops at unfetchable covers
Summary: [PATCH] Cover manager stops at unfetchable covers
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3-GIT
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 2.3.1
Assignee: Amarok Bugs
URL:
Keywords:
: 206784 207676 211929 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-08-25 02:31 UTC by opt-but-e
Modified: 2009-11-28 10:04 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
fix cover manager fetchall (2.05 KB, patch)
2009-09-30 02:56 UTC, Tycho Andersen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description opt-but-e 2009-08-25 02:31:49 UTC
Version:           2.2-GIT from 25.08.09 (using KDE 4.3.0)
Compiler:          gcc-4.4.1 -march=core2
OS:                Linux
Installed from:    Gentoo Packages

How to Reproduce:
1. Delete ~/.kde4/share/apps/amarok
2. Rescan collection
3. Go to cover manager
4. Fetch missing covers

The cover manager fetches the covers, but if it hits an album of which the cover cannot be downloaded, it simply stops fetching.
Workaround: Select the album after the unfetchable one, fetch the cover manually, then continue with "Fetch Missing Covers".

Expected Behaviour:
Amarok should happily skip those albums and continue fetching. Also, if the process was parallel, the fetches would gain a nice speedup.
Comment 1 Mikko C. 2009-08-25 08:38:46 UTC
Changed the title, it's not the scanner that fetches the covers :)
Comment 2 Myriam Schweingruber 2009-09-17 13:13:27 UTC
*** Bug 207676 has been marked as a duplicate of this bug. ***
Comment 3 Vadym Krevs 2009-09-17 13:52:04 UTC
The workaround mentioned above does not work in amarok 2.1.80 at all.
Comment 4 Chris 2009-09-18 18:47:50 UTC
I can confirm that this happens and also Vadym Krevs comment also is true.
Comment 5 Chris 2009-09-18 18:49:06 UTC
*** Bug 206784 has been marked as a duplicate of this bug. ***
Comment 6 Beth 2009-09-24 21:06:37 UTC
I can confirm this bug on Amarok 2.1.85/KDE 4.3/OpenSuSE 11.1 also.
Comment 7 Tycho Andersen 2009-09-30 02:56:09 UTC
Created attachment 37255 [details]
fix cover manager fetchall

This is a patch that fixes this (as well as another related) cover manager fetchall bug. There may be remaining bugs in cover manager that I've not run into yet (I'm still poking around this code), so there may be more patches in the future. I just thought I'd submit this now since I've tested it and it works (other testing would be appreciated ;-).
Comment 8 Mark Kretschmann 2009-09-30 12:25:23 UTC
Many thanks Tycho, I've just committed your patch to git master:


commit 0b0c476e56e2f9279b1c70ffb373a2d3b6e87c99
Author: Mark Kretschmann <kretschmann@kde.org>
Date:   Wed Sep 30 12:20:25 2009 +0200

    Cover Manager no longer stops when one cover cannot be fetched.

    Patch by Tycho Andersen <kdebugs@tycho.ws>. I've fixed a few small
    issues, like missing i18n.
Comment 9 Mikko C. 2009-11-28 10:04:20 UTC
*** Bug 211929 has been marked as a duplicate of this bug. ***