Cover Manager no longer stops when one cover cannot be fetched.

Patch by Tycho Andersen <kdebugs@tycho.ws>. I've fixed a few small
issues, like missing i18n.

BUG: 205032